# rover_receiver

./: .gitignore  CMakeLists.txt  README.md  cable_log.txt  first_log.txt  imgui.ini  makefile
build-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/imgui/: cmake_install.cmake
build-release/implot/: cmake_install.cmake
imgui/: CMakeLists.txt  imgui_widgets.cpp
implot/: CMakeLists.txt
include/: graph.hpp  gui.hpp  lib.hpp  lidar.hpp  lidar_drawer.hpp  log.hpp  parser.hpp  serial_port.hpp  shader.hpp  win_manager.hpp
include/glad/: glad.h
src/: gui.cpp  lidar.cpp  lidar_drawer.cpp  log.cpp  main.cpp  parser.cpp  serial_port.cpp
src/shaders/frag/: colored.frag  colored_dot.frag
src/shaders/vert/: circle.vert  dot.vert  line.vert  simple.vert  zoom_dot.vert
src/unused_cpp/: graph.cpp
